2009-02-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardElement.m ([CardElement -setParent:aParent]): no longer
	retain the parent passed as parameter.

2008-12-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalYearlyRecurrenceCalculator.m
	([iCalYearlyRecurrenceCalculator -lastInstanceStartDate]): same as
	below.

	* iCalMonthlyRecurrenceCalculator.m
	([iCalMonthlyRecurrenceCalculator -lastInstanceStartDate]): same
	as below.

	* iCalWeeklyRecurrenceCalculator.m
	([iCalWeeklyRecurrenceCalculator -lastInstanceStartDate]): same as
	below.

	* iCalDailyRecurrenceCalculator.m ([iCalDailyRecurrenceCalculator
	-lastInstanceStartDate]): return a date based on the start date,
	instead of julian calculations, to avoid losing the original date
	timezone.

2008-08-18  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* NSString+NGCards.m ([NSString -unescapedFromCard]): added code
	to correctly escape carriage returns from Outlook clients.

2008-08-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardGroup.m ([CardGroup -elementWithClass:groupClass]): replaces
	"groupWithClass:".

	* CardElement.m ([CardElement
	-deepCopyOfArray:oldArraywithZone:aZone]): new self-explaining
	method.
	([CardElement -deepCopyOfDictionary:oldDictionarywithZone:aZone]):
	new self-explaining method.
	([CardElement -copyWithZone:aZone])
	([CardElement -mutableCopyWithZone:aZone]): make a deep copy of
	the children elements.

2008-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalRepeatableEntityObject.m ([iCalRepeatableEntityObject
	-addToExceptionDates:_rdate]): the iCalDateTime argument was
	replaced with NSCalendarDate.

	* iCalEntityObject.m ([iCalEntityObject
	-setOrganizer:_organizer]): now accepts a nil argument.

	* CardGroup.m ([CardGroup -children]): now returns an NSMutableArray.
	([CardGroup -copyWithZone:aZone])
	([CardGroup -mutableCopyWithZone:aZone]): the children were not
	properlty cloned, we thus clone them explicitly.
