@@ -80,6 +80,7 @@
     }
 
   currentStartDate = [firStart copy];
+  [currentStartDate autorelease];
   ranges = [NSMutableArray array];
   i = 1;
 
