@@ -87,6 +87,7 @@
     }
  
   currentStartDate = [firStart copy];
+  [currentStartDate autorelease];
   ranges = [NSMutableArray array];
   byDayMask = [rrule byDayMask];
   i = 1;
