@@ -222,8 +222,11 @@ if ! id sogo >& /dev/null; then /usr/sbin/adduser sogo > /dev/null 2>&1; fi
 /sbin/chkconfig --add sogod
 
 %preun
-/sbin/chkconfig --del sogod
-/sbin/service sogod stop > /dev/null 2>&1
+if [ "$1" == "0" ]
+then
+  /sbin/chkconfig --del sogod
+  /sbin/service sogod stop > /dev/null 2>&1
+fi
 
 %postun
 if test "$1" = "0"
