@@ -1,3 +1,14 @@
+2009-03-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* iCalWeeklyRecurrenceCalculator.m
+	([iCalWeeklyRecurrenceCalculator
+	-recurrenceRangesWithinCalendarDateRange:_r]): same as below.
+
+	* iCalDailyRecurrenceCalculator.m ([iCalDailyRecurrenceCalculator
+	-recurrenceRangesWithinCalendarDateRange:_r]): autorelease
+	currentStartDate when instantiated from a copy of firDate, to
+	avoid a leak.
+
 2009-02-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* CardElement.m ([CardElement -setParent:aParent]): no longer
